--- a/ex1-bubble-tea-shop/style.css
+++ b/ex1-bubble-tea-shop/style.css
@@ -1,5 +1,59 @@
 body {
   font-family: "Kanit";
+
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 /* Start coding here */
+.container {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+}
+
+.box-main {
+  background-color: white;
+  padding: 10px;
+  font-weight: bold;
+  position: relative;
+}
+
+.position-1 {
+  font-size: 20px;
+  color: white;
+  position: absolute;
+  z-index: 1;
+  bottom: 15px;
+  left: 15px;
+}
+
+.position-2 {
+  padding: 5px 20px 5px 20px;
+  font-size: 20px;
+  color: white;
+  background-color: rgb(146, 146, 146, 0.8);
+  position: absolute;
+  top: 20px;
+  right: 15px;
+}
+
+img {
+  border-radius: 10px;
+}
+
+.Empty-box {
+  width: 625px;
+  height: 30px;
+  margin: 10px;
+  border-radius: 10px;
+  background-image: linear-gradient(0deg, rgb(0, 0, 0), rgba(252, 252, 249, 0));
+  position: absolute;
+  bottom: 4px;
+  left: 0px;
+}
