--- a/ex1-bubble-tea-shop/style.css
+++ b/ex1-bubble-tea-shop/style.css
@@ -1,5 +1,64 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: "Kanit";
+  background-color: black;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Start coding here */
+.card {
+  color: white;
+  background-color: white;
+  width: 50%;
+  height: 50%;
+  position: relative;
+  font-size: 16px;
+  border: 5px solid white;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  border-radius: 30px;
+}
+
+.detail {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  font-size: 1.5rem;
+  z-index: 3;
+}
+
+.location {
+  position: absolute;
+  background-color: rgba(125, 125, 127, 0.7);
+  font-size: 1.5rem;
+  padding: 10px 25px;
+  right: 0px;
+  top: 10px;
+}
+
+.bg-detail {
+  background-image: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0.1),
+    rgba(0, 0, 0, 1)
+  );
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  z-index: 2;
+  border-radius: 30px;
+}
