--- a/ex2-techup-chatroom/style.css
+++ b/ex2-techup-chatroom/style.css
@@ -1,1 +1,88 @@
 /* Start coding here */
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+body {
+  font-size: 16px;
+}
+
+nav {
+  color: white;
+  background-color: #808080;
+  height: 50px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.send {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  position: relative;
+}
+
+.send p {
+  background-color: #09be09;
+}
+
+.receive {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.receive p {
+  background-color: #808080;
+}
+
+p.delete {
+  background-color: #e7e3e3;
+}
+
+p {
+  width: 200px;
+  height: 30px;
+  margin: 10px;
+  border-radius: 20px;
+  padding: 5px;
+  z-index: 1;
+}
+
+.cancle {
+  border-radius: 50%;
+  height: 20px;
+  width: 20px;
+  background-color: #bebebe;
+  color: white;
+  text-align: center;
+  position: absolute;
+  top: 110px;
+  right: 5px;
+  z-index: 2;
+}
+
+.start {
+  background-color: #09be09;
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 63px;
+  right: 5px;
+  border-radius: 100%;
+  z-index: 2;
+}
+
+.half {
+  background-color: white;
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  top: 51px;
+  right: 8px;
+  border-radius: 100%;
+  z-index: 3;
+}
